# mahjong_soul_api

./: .gitignore  README.md  example.py  example_admin.py  liqi.json  pyproject.toml  requirements.txt  setup.py
ms/: base.py  example.py  generate_proto_file.py  liqi.json  ms-plugin.py  msjrpc.py  protocol.proto  protocol_msjrpc.py  protocol_pb2.py  rpc.py
ms/data/: liqi.json  protocol.proto
ms_tournament/: liqi_admin.json  protocol_admin.proto  protocol_admin_pb2.py  rpc.py
